--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-    background: url(ind.jpg);
+    background: url(ana.jpg);
     height: 150vh;
     background-size: 100% 100%;
 }
