--- a/style2.css
+++ b/style2.css
@@ -11,3 +11,4 @@
     font-size: larger;
     padding: 6px 13px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    filter: blur(5px);
