--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     background: url(ana.jpg);
     height: 150vh;
     background-size: 100% 100%;
+    filter: blur(5px);
 }
 .container .navbar{
     width: 100%;
