--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 }
 
 .container{
-    background: url(doku.jpg);
+    background: url(doku.jpg); filter: blur(5px);
     height: 150vh;
     background-size: 100% 100%;
-    background-filter: blur(5px);
+   	 
 }
 .container .navbar{
     width: 100%;
