--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-    background: url(doku.jpg);
+    background: url(arka.jpg);
     height: 150vh;
     background-size: 100% 100%;
    	 
