--- a/style.css
+++ b/style.css
@@ -44,5 +44,6 @@
     font-size: 20px;
     padding: 6px 13px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+	<p style="font-variant:small-caps;">Small Caps Can Be Useful... But Don't OverDo It!.</p>
 
 }
