--- a/style2.css
+++ b/style2.css
@@ -3,8 +3,8 @@
 	padding: 0;
 }
 .container{
-    background: url(ile.jpg);
-    height: 150vh;
+    background: url(backgok.jpg);
+    height: 200vh;
     background-size: 100% 100%;
     color:ghostwhite;
     text-decoration: none;
