--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,12 @@
 .container{
     background: url(backgok.jpg);
     height: 200vh;
-    background-size: 100% 100%;
+    background-size: 100% 100%
+    background-repeat: repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+}
     color:ghostwhite;
     text-decoration: none;
     font-size: larger;
